# school_clion

./: .clang-format  CMakeLists.txt  main.cpp
funktionszeiger/: funktionszeiger.cpp  funktionszeiger.h
quicksort/: quicksort.cpp  quicksort.h
sort/: bubblesort.cpp  bubblesort.h  quicksort.cpp  quicksort.h
student_array/: student_array.cpp  student_array.h
tools/: output.cpp  output.h  random_array.cpp  random_array.h
txt/: ITB06.txt  ITB06NachVor.txt
wiederholung/: wiederholung.cpp  wiederholung.h
